[metadata]
name = pyF1TV
version = attr: pyf1tv.__version__
url = https://github.com/ulacioh/pyF1TV
license = MIT
author = Hector Ulacio
author_email = hectorulacior@gmail.com
maintainer = Hector Ulacio
maintainer_email = hectorulacior@gmail.com
description = Package to extract session/time data from F1TV data channel graphics
long_description = file: README.md
long_description_content_type = text/markdown
keywords = formula 1, f1tv, f1 telemetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
include_package_data = True
python_requires = >= 3.10
install_requires =
    pytesseract>=0.3.10
    easyocr>=1.6.2
